fix app height on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 @import '../sass/variables';
 
 .container {
-  height: 100vh;
+  height: 100%;
   padding: $length36 $length20;
 }
