--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ html, body {
   background: var(--contrast);
   color: var(--primary);
   font: 400 16px/1.7 'Rubik', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Noto Sans', 'Helvetica Neue', sans-serif;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
